Segundo Modulo Henry

--- a/01-DOM/homework/index.html
+++ b/01-DOM/homework/index.html
@@ -13,7 +13,7 @@
         <span>DOM Homework</span>
     </div>
     <h1>To-Do App</h1>
-    <div><span id="createdBy">Aplicación creada por:</span></div>
+    <div><span id="createdBy">Aplicación creada por: Osvaldo Corneli</span></div>
     <div id="container">
         <div id="inputContainer">
             <input type="text" id="toDoInput" placeholder="Descripción To-Do..." />
